# form

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  COPYING  INSTALL  Makefile.am  README  README.md  cleanup.sh  configure.ac  contact.html  contact.php  doc.html  doc.php  features.html  features.php  gendate.sh  index.html  index.php  intro.php
.github/actions/setup-build/: action.yml
.github/workflows/: deploy.yml  test.yml
check/: .rubocop.yml  Makefile  Makefile.am  Makefile.in  README.md  benchmark-fu.sh  check-help.sh  check.rb  color.frm  dollar-parallel-warning.frm  examples.frm  examples.rb  features.frm  fixes.frm  form.rb  parser.rb  polynomial.frm  symmetrize.rb  table.rb  user.frm
check/benchmarks/: compression.frm
check/checkpoint/: checkpoint.frm
check/extra/: color.frm  forcer.frm  multithreaded.frm  series.frm
check/forcer/: forcer.frm
check/formunit/: fu.frm
check/include/: color.h
check/multithreaded/: multithreaded.frm
doc/: Doxyfile  Makefile.am  form.1
doc/devref/: .latex2html-init  Makefile.am  cvs.tex  devref.tex.in  devrefdate.tex  formrun.tex  indepth.tex  source.tex  testsuite.tex
doc/doxygen/: DoxyfileHTML.in  DoxyfileLATEX.in  DoxyfilePDFLATEX.in  Makefile.am
doc/manual/: .latex2html-init  Makefile.am  bracket.tex  calculus.tex  diagrams.tex  dict.tex  dollar.tex  external.tex  float.tex  functions.tex  gamma.tex  man.tex  manual.tex.in  manualdate.tex  metric.tex  module.tex  online.tex  optim.tex  parallel.tex  pattern.tex  poly.tex  polynomials.tex  prepro.tex  setup.tex  sorting.tex  spectators.tex  startup.tex  statements.tex  tablebas.tex  variable.tex
form/: Makefile
parform/: ChangeLog  Makefile
scripts/: .latex2html-init  cleanup.sh  gendate.sh  git-version-gen.sh  run-latex2html.sh  travis-after_success.sh  travis-install.sh  travis-script.sh  update-copyright.sh
sources/: Makefile.am  argument.c  bugtool.c  checkpoint.c  comexpr.c  compcomm.c  compiler.c  compress.c  comtool.c  comtool.h  declare.h  diagrams.c  diawrap.cc  dict.c  dollar.c  evaluate.c  execute.c  extcmd.c  factor.c  findpat.c  flintinterface.cc  flintinterface.h  flintwrap.cc  float.c  form3.h  fsizes.h  ftypes.h  function.c  fwin.h  gentopo.cc  gentopo.h  grcc.cc  grcc.h  grccparam.h  if.c  index.c  inivar.h  lus.c  mallocprotect.h  message.c  (+64 more)
